fix: assets uploading
